src/objects/DNBoptimizer__DnBCompanyRecord__c.object
<CustomObject>
    <fields>
        <fullName>DNBoptimizer__BusinessDescription__c</fullName>
        <description>A description of the entity’s business operations, if available.</description>
        <inlineHelpText>A description of the entity’s business operations, if available.</inlineHelpText>
        <label>Business Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__BusinessName__c</fullName>
        <description>The single name by which the entity is primarily known or identified.</description>
        <inlineHelpText>The single name by which the entity is primarily known or identified.</inlineHelpText>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DUNSNumber__c</fullName>
        <description>The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <inlineHelpText>The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DelistedIndicator__c</fullName>
        <description>Indicates that the subject has requested that they not be included in any D&amp;B marketing lists (e.g.: mailing, telephone).</description>
        <inlineHelpText>Indicates that the subject has requested that they not be included in any D&amp;B marketing lists (e.g.: mailing, telephone).</inlineHelpText>
        <label>Opted out of Direct Marketing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DomesticUltimateBusinessName__c</fullName>
        <description>The name of the highest business in the family tree that is in the same country/region as the subject.</description>
        <inlineHelpText>The name of the highest business in the family tree that is in the same country as the subject</inlineHelpText>
        <label>Domestic Ultimate Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DomesticUltimateDUNSNumber__c</fullName>
        <description>The D-U-N-S Number of the highest level parent within a corporate family tree that is domiciled in the same country/region as the requested company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock.</description>
        <inlineHelpText>The D-U-N-S Number of the highest level parent within a corporate family tree that is domiciled in the same country as the requested company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock.</inlineHelpText>
        <label>Domestic Ultimate D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DomesticUltimateIndicator__c</fullName>
        <description>Indicates whether the subject record is the Domestic Ultimate Parent within their corporate family tree.</description>
        <inlineHelpText>Indicates whether the subject record is the Domestic Ultimate Parent within their corporate family tree.</inlineHelpText>
        <label>Domestic Ultimate Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__EmployeeCountTotalReliabilityCode__c</fullName>
        <description>A code value which describes the reliability of the Employees Total figure.</description>
        <inlineHelpText>A code value which describes the reliability of the Employees Total figure.</inlineHelpText>
        <label>Employee Count Total Reliability Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__EmployeeCountTotalReliabilityDescription__c</fullName>
        <description>A description of the reliability of the Employees Total figure.</description>
        <inlineHelpText>A description of the reliability of the Employees Total figure.</inlineHelpText>
        <label>Employee Count Total Reliability Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__EmployeeCountTotal__c</fullName>
        <description>The total number of employees in the business organization; it should include subsidiary and branch locations.</description>
        <inlineHelpText>The total number of employees in the business organization; it should include subsidiary and branch locations.</inlineHelpText>
        <label>Employee Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__EmployeeCountTrendYear__c</fullName>
        <description>The percentage change of this item as of base year compared to the trend year.</description>
        <inlineHelpText>The percentage change of this item as of base year compared to the trend year</inlineHelpText>
        <label>Employee Count Trend Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__EmployeesHereReliabilityCode__c</fullName>
        <description>A code value which describes the reliability of the Employees Here figure.</description>
        <inlineHelpText>A code value which describes the reliability of the Employees Here figure.</inlineHelpText>
        <label>Employee Count Here Reliability Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__EmployeesHereReliabilityDescription__c</fullName>
        <description>A description of the reliability of the Employees Here figure.</description>
        <inlineHelpText>A description of the reliability of the Employees Here figure.</inlineHelpText>
        <label>Employee Count Here Reliability Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__EmployeesHere__c</fullName>
        <description>The number of employees at this location.</description>
        <inlineHelpText>The number of employees at this location.</inlineHelpText>
        <label>Employee Count Here</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__FaxNumber__c</fullName>
        <description>The fax number of the business.</description>
        <inlineHelpText>The fax number of the business.</inlineHelpText>
        <label>Fax Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__FiscalYearEnd__c</fullName>
        <description>The date when the accounting period ended. If the Reliability Code denotes the figures are projected (future), then this is the date when the accounting period will end.</description>
        <inlineHelpText>The date when the accounting period ended. If the Reliability Code denotes the figures are projected (future), then this is the date when the accounting period will end.</inlineHelpText>
        <label>Fiscal Year End</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__Fortune1000Rank__c</fullName>
        <description>Indicates if the company is in the Fortune 1000 by its rank.</description>
        <inlineHelpText>Indicates if the company is in the Fortune 1000 by its rank.</inlineHelpText>
        <label>Fortune 1000 Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__GlobalUltimateBusinessName__c</fullName>
        <description>The primary name of the highest level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</description>
        <inlineHelpText>The primary name of the highest level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</inlineHelpText>
        <label>Global Ultimate Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__GlobalUltimateDUNSNumber__c</fullName>
        <description>The D-U-N-S number of the highest-level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</description>
        <inlineHelpText>The D-U-N-S number of the highest-level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</inlineHelpText>
        <label>Global Ultimate D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__GlobalUltimateIndicator__c</fullName>
        <description>Indicates whether the subject record is the Global Ultimate Parent within their corporate family tree.</description>
        <inlineHelpText>Indicates whether the subject record is the Global Ultimate Parent within their corporate family tree.</inlineHelpText>
        <label>Global Ultimate Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__HeadquarterBusinessName__c</fullName>
        <description>The business name of the headquarters company. A headquarters is a business establishment that has branches or divisions reporting to it.</description>
        <inlineHelpText>The business name of the headquarters company. A headquarters is a business establishment that has branches or divisions reporting to it.</inlineHelpText>
        <label>Headquarter Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__HeadquarterDUNSNumber__c</fullName>
        <description>The D-U-N-S Number of the headquarters company. A headquarters is a business establishment that has branches or divisions reporting to it.</description>
        <inlineHelpText>The D-U-N-S Number of the headquarters company. A headquarters is a business establishment that has branches or divisions reporting to it.</inlineHelpText>
        <label>Headquarter D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__ImporterExporterDescription__c</fullName>
        <description>A description that, if known, identifies whether the business imports goods or services for re-manufacture or sale, exports products or services to a foreign country, and/or is an agent for goods.</description>
        <inlineHelpText>A description that, if known, identifies whether the business imports goods or services for re-manufacture or sale, exports products or services to a foreign country, and/or is an agent for goods.</inlineHelpText>
        <label>Importer Exporter Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__ImporterExporterIndicator__c</fullName>
        <description>A code value that identifies whether the business imports goods or services for re-manufacture or sale, exports products or services to a foreign country, and/or is an agent for goods.</description>
        <inlineHelpText>A code value that identifies whether the business imports goods or services for re-manufacture or sale, exports products or services to a foreign country, and/or is an agent for goods.</inlineHelpText>
        <label>Importer Exporter Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__IncorporatedDate__c</fullName>
        <description>The date on which the registered business was incorporated, as stated in the business registration.</description>
        <inlineHelpText>The date on which the registered business was incorporated, as stated in the business registration.</inlineHelpText>
        <label>Incorporation Date</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__LegalStatusCode__c</fullName>
        <description>A code value which describes the legal structure of the business.</description>
        <inlineHelpText>A code value which describes the legal structure of the business.</inlineHelpText>
        <label>Legal Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__LegalStructureDescription__c</fullName>
        <description>A description of the legal structure of the business.</description>
        <inlineHelpText>A description of the legal structure of the business.</inlineHelpText>
        <label>Legal Structure Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__LocationType__c</fullName>
        <description>Identifies the organizational status of a company. Available values are Single location, Headquarters/Parent, and Branch.</description>
        <inlineHelpText>Identifies the organizational status of a company. Available values are Single location, Headquarters/Parent, and Branch.</inlineHelpText>
        <label>Location Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MailingAddress1__c</fullName>
        <description>The address number, or post office box number, and street name where the business has its mail delivered.</description>
        <inlineHelpText>The address number, or post office box number, and street name where the business has its mail delivered.</inlineHelpText>
        <label>Mailing Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MailingAddress2__c</fullName>
        <description>The second line of the address number, or post office box number, and street name where the business has its mail delivered.</description>
        <inlineHelpText>The second line of the address number, or post office box number, and street name where the business has its mail delivered.</inlineHelpText>
        <label>Mailing Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MailingCityName__c</fullName>
        <description>The name of the city where the business has its mail delivered.</description>
        <inlineHelpText>The name of the city where the business has its mail delivered.</inlineHelpText>
        <label>Mailing Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MailingCountryCode_ISO__c</fullName>
        <description>Mailing Address Country/Region Code normalized by the Salesforce ISO Service</description>
        <label>Mailing Address Country/Region Code ISO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MailingCountryCode__c</fullName>
        <description>The two-letter country/region code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country/region which the business uses for mailing purposes.</description>
        <inlineHelpText>The two-letter country code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country which the business uses for mailing purposes.</inlineHelpText>
        <label>Mailing Address Country/Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MailingPostalCode__c</fullName>
        <description>An identifier used by the local country/region Postal Authority which the business uses for mailing purposes.</description>
        <inlineHelpText>An identifier used by the local country Postal Authority which the business uses for mailing purposes.</inlineHelpText>
        <label>Mailing Address Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MailingStateAbbreviation_ISO__c</fullName>
        <description>Mailing Address State Abbrev normalized by the Salesforce ISO Service</description>
        <label>Mailing Address State Abbrev ISO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MailingStateAbbreviation__c</fullName>
        <description>The abbreviation for the state or province where the business has its mail delivered.</description>
        <inlineHelpText>The abbreviation for the state or province where the business has its mail delivered.</inlineHelpText>
        <label>Mailing Address State Abbrev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MailingStateName__c</fullName>
        <description>The name of the state or province where the business has its mail delivered.</description>
        <inlineHelpText>The name of the state or province where the business has its mail delivered.</inlineHelpText>
        <label>Mailing Address State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MarketableIndicator__c</fullName>
        <description>Indicates whether or not the subject record satisfies D&amp;B&apos;s global marketability rules.</description>
        <inlineHelpText>Indicates whether or not the subject record satisfies D&amp;B&apos;s global marketability rules.</inlineHelpText>
        <label>Marketability Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MinorityOwnedIndicator__c</fullName>
        <description>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by and whose management and daily business operations are controlled by one or more minority group members.</description>
        <inlineHelpText>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by and whose management and daily business operations are controlled by one or more minority group members.</inlineHelpText>
        <label>Minority Owned Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NAICSCode1__c</fullName>
        <description>The primary North American Industry Classification System (NAICS) code for the business.</description>
        <inlineHelpText>The primary North American Industry Classification System (NAICS) code for the business.</inlineHelpText>
        <label>NAICS Code 1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NAICSCode2__c</fullName>
        <description>The secondary North American Industry Classification System (NAICS) code for the business.</description>
        <inlineHelpText>The secondary North American Industry Classification System (NAICS) code for the business.</inlineHelpText>
        <label>NAICS Code 2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NAICSCode3__c</fullName>
        <description>The tertiary North American Industry Classification System (NAICS) code for the business.</description>
        <inlineHelpText>The tertiary North American Industry Classification System (NAICS) code for the business.</inlineHelpText>
        <label>NAICS Code 3</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NAICSDescription1__c</fullName>
        <description>The primary North American Industry Classification System (NAICS) description for the business.</description>
        <inlineHelpText>The primary North American Industry Classification System (NAICS) description for the business.</inlineHelpText>
        <label>NAICS Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NAICSDescription2__c</fullName>
        <description>The secondary North American Industry Classification System (NAICS) description for the business.</description>
        <inlineHelpText>The secondary North American Industry Classification System (NAICS) description for the business.</inlineHelpText>
        <label>NAICS Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NAICSDescription3__c</fullName>
        <description>The tertiary North American Industry Classification System (NAICS) description for the business.</description>
        <inlineHelpText>The tertiary North American Industry Classification System (NAICS) description for the business.</inlineHelpText>
        <label>NAICS Description 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NationalIdentificationNumber__c</fullName>
        <description>The business identification number used in some countries for business registration and tax collection.</description>
        <inlineHelpText>The business identification number used in some countries for business registration and tax collection.</inlineHelpText>
        <label>National Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NationalIdentificationSystem__c</fullName>
        <description>A description of the type of National ID number provided.</description>
        <inlineHelpText>A description of the type of National ID number provided.</inlineHelpText>
        <label>National Identification System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NumberofFamilyMembers__c</fullName>
        <description>This is the number of linkages in the upward and downward directions of the entire family tree that the subject belongs to, starting from then global ultimate.</description>
        <inlineHelpText>This is the number of linkages in the upward and downward directions of the entire family tree that the subject belongs to, starting from then global ultimate.</inlineHelpText>
        <label>Number of Family Members</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__OutofBusinessIndicator__c</fullName>
        <description>Indicates whether the business at this address has discontinued operations.</description>
        <inlineHelpText>Indicates whether the business at this address has discontinued operations.</inlineHelpText>
        <label>Out of Business Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__ParentBusinessName__c</fullName>
        <description>The business name of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</description>
        <inlineHelpText>The business name of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</inlineHelpText>
        <label>Parent Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__ParentDUNSNumber__c</fullName>
        <description>The D-U-N-S number of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</description>
        <inlineHelpText>The D-U-N-S number of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</inlineHelpText>
        <label>Parent D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryCityName__c</fullName>
        <description>The name of the city where the business is physically located.</description>
        <inlineHelpText>The name of the city where the business is physically located.</inlineHelpText>
        <label>Primary Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryCountryCode_ISO__c</fullName>
        <description>Primary Address Country/Region Code normalized by the Salesforce ISO Service</description>
        <label>Primary Address Country/Region Code ISO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryCountryCode__c</fullName>
        <description>The two-letter country/region code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country/region of the business entity.</description>
        <inlineHelpText>The two-letter country code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country of the business entity.</inlineHelpText>
        <label>Primary Address Country/Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryCountryName__c</fullName>
        <description>The name of the country/region where the business is physically located.</description>
        <inlineHelpText>The name of the country/region where the business is physically located.</inlineHelpText>
        <label>Primary Address Country/Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryCountyName__c</fullName>
        <description>The name of the county where the business is physically located.</description>
        <inlineHelpText>The name of the county where the business is physically located.</inlineHelpText>
        <label>Primary Address County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryLatitude__c</fullName>
        <description>The angular distance of the organization&apos;s primary physical address north or south from the Earth&apos;s equator measured through 90 degrees expressed in decimal numbers.</description>
        <inlineHelpText>The angular distance of the organization&apos;s primary physical address north or south from the Earth&apos;s equator measured through 90 degrees expressed in decimal numbers.</inlineHelpText>
        <label>Primary Address Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryLongitude__c</fullName>
        <description>The angular distance of the organization&apos;s primary physical address east or west from an imaginary line (called the prime meridian) that goes from the North Pole to the South Pole measured through 90 degrees expressed in decimal numbers.</description>
        <inlineHelpText>The angular distance of the organization&apos;s primary physical address east or west from an imaginary line (called the prime meridian) that goes from the North Pole to the South Pole measured through 90 degrees expressed in decimal numbers.</inlineHelpText>
        <label>Primary Address Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryOwns_RentsCode__c</fullName>
        <description>A code value that denotes if the business owns or rents the building it occupies.</description>
        <inlineHelpText>A code value that denotes if the business owns or rents the building it occupies.</inlineHelpText>
        <label>Primary Address Owns/Rents Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryPostalCode__c</fullName>
        <description>An identifier used by the local country/region Postal Authority to identify where the business is located.</description>
        <inlineHelpText>An identifier used by the local country Postal Authority to identify where the business is located.</inlineHelpText>
        <label>Primary Address Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimarySquareFootage__c</fullName>
        <description>The building space this entity operates from within a building as measured in square feet</description>
        <inlineHelpText>The building space this entity operates from within a building as measured in square feet.</inlineHelpText>
        <label>Primary Address Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryStateProvinceAbbreviation_ISO__c</fullName>
        <description>Primary Address State Province normalized by the Salesforce ISO Service</description>
        <label>Primary Address State Province ISO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryStateProvinceAbbreviation__c</fullName>
        <description>The abbreviation for the state or province where the business is physically located.</description>
        <inlineHelpText>The abbreviation for the state or province where the business is physically located.</inlineHelpText>
        <label>Primary Address State Province Abbrev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryStateProvinceName__c</fullName>
        <description>The name of the state or province where the business is physically located.</description>
        <inlineHelpText>The name of the state or province where the business is physically located.</inlineHelpText>
        <label>Primary Address State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryStreetAddress2__c</fullName>
        <description>The second line of the address number, or post office box number, and street name where the business is located.</description>
        <inlineHelpText>The second line of the address number, or post office box number, and street name where the business is located.</inlineHelpText>
        <label>Primary Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryStreetAddress__c</fullName>
        <description>The address number, or post office box number, and street name where the business is located.</description>
        <inlineHelpText>The address number, or post office box number, and street name where the business is located.</inlineHelpText>
        <label>Primary Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PrimaryUSMetropolitanArea__c</fullName>
        <description>The name assigned to the 5-digit CBSA (Core Based Statistical Area) assigned by US Census board to denote a geographical region with a relatively high population density at its core.</description>
        <inlineHelpText>The name assigned to the 5-digit CBSA (Core Based Statistical Area) assigned by US Census board to denote a geographical region with a relatively high population density at its core.</inlineHelpText>
        <label>Primary Address US Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__Public_PrivateIndicator__c</fullName>
        <description>Indicates whether ownership of the business is public or private.</description>
        <inlineHelpText>Indicates whether ownership of the business is public or private.</inlineHelpText>
        <label>Public Private Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__RevenueTrendYear__c</fullName>
        <description>The percentage change of this item as of base year compared to the trend year.</description>
        <inlineHelpText>The percentage change of this item as of base year compared to the trend year.</inlineHelpText>
        <label>Revenue Trend Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code1Description__c</fullName>
        <description>The primary Standard Industrial Classification (SIC) description for the business.</description>
        <inlineHelpText>The primary Standard Industrial Classification (SIC) description for the business.</inlineHelpText>
        <label>SIC4 Code 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code1__c</fullName>
        <description>The primary Standard Industrial Classification (SIC) four digit code for the business.</description>
        <inlineHelpText>The primary Standard Industrial Classification (SIC) four digit code for the business.</inlineHelpText>
        <label>SIC4 Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code2Description__c</fullName>
        <description>The secondary Standard Industrial Classification (SIC) description for the business.</description>
        <inlineHelpText>The secondary Standard Industrial Classification (SIC) description for the business.</inlineHelpText>
        <label>SIC4 Code 2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>